defined html body's main

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 
         <main>
             <div>
-                
+                <ul>
+                   <div>
+                       <input type="checkbox">
+                       <li>Homework</li>
+                       <i class="fas fa-trash"></i>
+                   </div>
+                </ul>
             </div>
 
         </main>
