--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
         </main>
 
         <footer>
-
+            <p>1 Tasks Left</p>
+            <div>
+                <button>ALL</button>
+                <button>Completed</button>
+                <button>Uncomplited</button>
+            </div>
         </footer>
     
     
