added delete button functionality

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <header>
             <h1>TODO APP</h1>
             <div>
-                <input type="text" placeholder="Enter Your Task">
-                <button>ADD Task</button>
+                <input id="Task" type="text" placeholder="Enter Your Task">
+                <button id="Add-button">ADD Task</button>
             </div>
             <div>
                 <button>Complete All Tasks</button>
@@ -25,8 +25,13 @@
                    <div>
                        <input type="checkbox">
                        <li>Homework</li>
-                       <i class="fas fa-trash"></i>
+                       <i class="fas fa-trash delete-tasks">dsds</i>
                    </div>
+                   <div>
+                    <input type="checkbox">
+                    <li>DS</li>
+                    <i class="fas fa-trash delete-tasks">dsds</i>
+                </div>
                 </ul>
             </div>
 
