added Add Task button functionality

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <header>
             <h1>TODO APP</h1>
             <div>
-                <input id="Task" type="text" placeholder="Enter Your Task">
-                <button id="Add-button">ADD Task</button>
+                <input id="task" type="text" placeholder="Enter Your Task">
+                <button id="add-button">ADD Task</button>
             </div>
             <div>
                 <button>Complete All Tasks</button>
@@ -21,17 +21,18 @@
 
         <main>
             <div>
-                <ul>
+                <ul id="tasks-container">
                    <div>
-                       <input type="checkbox">
                        <li>Homework</li>
                        <i class="fas fa-trash delete-tasks">dsds</i>
                    </div>
+
                    <div>
                     <input type="checkbox">
                     <li>DS</li>
                     <i class="fas fa-trash delete-tasks">dsds</i>
-                </div>
+                   </div>
+
                 </ul>
             </div>
 
