added more functions

--- a/index.html
+++ b/index.html
@@ -14,27 +14,31 @@
                 <button id="add-button">ADD Task</button>
             </div>
             <div>
-                <button>Complete All Tasks</button>
-                <button>Clear All Completed Task</button>
+                <button id="complete-all"> Complete All Tasks</button>
+                <button  id="clear-complete">Clear All Completed Task</button>
             </div>
         </header>
 
         <main>
             <div>
                 <ul id="tasks-container">
-                   <div class="uncomplete">
-                       <li>Homework</li>
-                       <i class="fas fa-trash delete-tasks">dsds</i>
+                   <div class="uncomplete tsk">
+                    <li>Homework</li>
+                    <i class="fas fa-trash delete-tasks"></i>
                    </div>
 
-                   <div class="uncomplete">
-                    <li>DS</li>
-                    <i class="fas fa-trash delete-tasks">dsds</i>
+                   <div class="uncomplete tsk">                    
+                    <li>web</li>
+                    <i class="fas fa-trash delete-tasks"></i>
                    </div>
 
-                   <div class="complete">                   
+                   <div class="complete tsk">                                      
                     <li>DS</li>
-                    <i class="fas fa-trash delete-tasks">dsds</i>
+                    <i class="fas fa-trash delete-tasks"></i>
+                   </div>
+                   <div class="complete tsk">                                      
+                    <li>react</li>
+                    <i class="fas fa-trash delete-tasks"></i>
                    </div>
 
                 </ul>
