given little much style

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <h1>TODO APP</h1>
-            <div>
+            <div id="take-ip">
                 <input id="task" type="text" placeholder="Enter Your Task">
                 <button id="add-button">ADD Task</button>
             </div>
-            <div>
+            <div id="two">
                 <button id="complete-all"> Complete All Tasks</button>
                 <button  id="clear-complete">Clear All Completed Task</button>
             </div>
