added more style to whole body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1>TODO APP</h1>
             <div id="take-ip">
                 <input id="task" type="text" placeholder="Enter Your Task">
-                <button id="add-button">ADD Task</button>
+                <button id="add-button">ADD TASK</button>
             </div>
             <div id="two">
                 <button id="complete-all"> Complete All Tasks</button>
@@ -51,7 +51,7 @@
             <div>
                 <button id="all-button">ALL</button>
                 <button id="complete-button">Completed</button>
-                <button id="uncomplete-button">Uncomplite</button>
+                <button id="uncomplete-button">Uncomplete</button>
             </div>
         </footer>
     
