--- a/index.html
+++ b/index.html
@@ -22,24 +22,7 @@
         <main>
             <div>
                 <ul id="tasks-container">
-                   <div class="uncomplete tsk">
-                    <li>Homework</li>
-                    <i class="fas fa-trash delete-tasks"></i>
-                   </div>
-
-                   <div class="uncomplete tsk">                    
-                    <li>web</li>
-                    <i class="fas fa-trash delete-tasks"></i>
-                   </div>
-
-                   <div class="complete tsk">                                      
-                    <li>DS</li>
-                    <i class="fas fa-trash delete-tasks"></i>
-                   </div>
-                   <div class="complete tsk">                                      
-                    <li>react</li>
-                    <i class="fas fa-trash delete-tasks"></i>
-                   </div>
+                  
 
                 </ul>
             </div>
@@ -47,7 +30,7 @@
         </main>
 
         <footer>
-            <p></p>
+            <p id="total-count"></p>
             <div>
                 <button id="all-button">ALL</button>
                 <button id="complete-button">Completed</button>
