add some functions and css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>TODO APP</h1>
             <div id="take-ip">
-                <input id="task" type="text" placeholder="Enter Your Task">
+                <input id="task" type="text" placeholder="Type Your Todo List">
                 <button id="add-button">ADD TASK</button>
             </div>
             <div id="two">
