last commit:- added comments

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 
 <html>
     <head>
-    
-    <meta name="viewport" content="width=device-width",initial-scale="1">
+    <!-- meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width",initial-scale="1">   
+    <!-- fontawesome stylesheet -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <!-- css file -->
     <link rel="stylesheet" href="style.css">
     </head>
 
@@ -21,6 +23,7 @@
         </header>
 
         <main>
+            <!-- this div contains all the task list added to it -->
             <div>
                 <ul id="tasks-container">
                   
