--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div>
                 <button id="all-button">ALL</button>
                 <button id="complete-button">Completed</button>
-                <button id="uncomplete-button">Uncomplete</button>
+                <button id="uncomplete-button">Incomplete</button>
             </div>
             
         </footer>
